# ggllama

./: .gitignore  Cargo.toml  README.md
src/: agent.rs  chat.rs  core.rs  file_environment.rs  inference.rs  json.rs  lib.rs  main.rs  pipeline.rs  prompt_formatter.rs  scene.rs  util.rs
