[package]
name = "ggllama"
version = "0.1.0"
edition = "2024"

[profile.test]
inherits = "release"

[profile.dev.package."*"]
inherits = "release"

[dependencies]
ggutil = { path = "../ggutil" }
ggmath = { path = "../ggmath" }
llama-cpp-4 = { version = "0.3.2", features = ["cuda"] }
static_init = "1.0"
encoding_rs = "0.8"
serde_json = "1.0"
anyhow = "1.0"
aho-corasick = "1.1"
colored = "3.1.1"